samples/_failures_safe/1761141239_d54d72_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a00cb820.c: In function ‘main’:
./samples/SAFE/__tmp_a00cb820.c:131:5: error: expected expression at end of input
  131 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_a00cb820.c:131:5: error: expected declaration or statement at end of input
